# random-password-generator

./: .gitignore  .travis.yml  LICENSE  Procfile  README.md  api.py  app.json  main.py  password_generator.py  pyproject.toml  requirements.txt  setup.py  tests.py
.circleci/: config.yml
static/css/: home.css  main.css
static/js/: main.js
templates/: home.html  layout.html  nonduplicate.html  normal.html  shuffle.html
templates/css/: main.css
