[tool.poetry]
name = "random-password-generator"
version = "v2.1.2"
description = "Simple and custom random password generator for python"
authors = ["Surya Teja <94suryateja@gmail.com>"]
license = "MIT"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: Utilities',
    'Operating System :: POSIX'
]
keywords=["random", "password", "generator", "different", "lengths"]
homepage = "https://github.com/suryasr007/random-password-generator"
readme = "README.md"

packages = [
    { include = "password_generator.py" }
]

[tool.poetry.dependencies]
python = "^3.7"
Flask-RESTful = "*"
marshmallow = "*"
webargs = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
